influxdb/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: influxdb
  type: LoadBalancer
  ports:
    - port: 8086               # < port to open on the outside on the server
      targetPort: 8086         # < targetport. port on the pod to passthrough
      name: influxdb             # < reference name for the port in the deployment yaml
      protocol: TCP
